feature: new way signal search; rsi, mfi, cci indicators